--- a/mm_lectures.html
+++ b/mm_lectures.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <!--Title-->
-    <title>Open Project Space</title>
+    <title>Micromouse</title>
     <!--Favicon-->
-    <link rel="icon" href="./assets/images/ops_logo_favicon.png">
+    <link rel="icon" href="./assets/images/mm_general/mm_logo_whitemaze.PNG">
     <!--Roboto Font CDN-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
@@ -48,9 +48,9 @@
         <h1 class="fw-bold mt-5 mb-4 text-center">Lectures</h1>
         <h2 class="text-center mt-3">Nothing here yet. Check back after the first meeting!</h2>
         <!-- <div class="row row-cols-xl-4 row-cols-sm-2 row-cols-1 g-4" style="width: 100%; margin: auto;"> -->
-        <div class="card-deck" hidden>
+        <div class="card-deck">
             <!-- Lecture Roadmap Card -->
-            <script src="./js/card.js" title="OPS Roadmap" date="Fall Quarter - Week 3"
+            <script src="./js/card.js" title="Micromouse Introduction" date="Fall Quarter - Week 3"
                 image="./assets/images/ops_logo_100ppi.png"
                 slides="./assets/pdfs/lectures-24-25/[2024-25] OPS Roadmap.pdf"
                 content="Get an overview of Open Project Space, IEEE at UCI, and a roadmap of all the OPS projects."></script>
