--- a/mm_syllabus.html
+++ b/mm_syllabus.html
@@ -13,9 +13,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <!--Title-->
-    <title>Syllabus | Open Project Space</title>
+    <title>Syllabus | Micromouse</title>
     <!--Favicon-->
-    <link rel="icon" href="./assets/images/ops_logo_favicon.png">
+    <link rel="icon" href="./assets/images/mm_general/mm_logo_whitemaze.PNG">
     <!--Roboto Font CDN-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
