Updated front page

--- a/mm_index.html
+++ b/mm_index.html
@@ -50,17 +50,16 @@
 </head>
 
 <body>
-    <!-- ======= Landing Title Box ======= -->
-    <section class="landing-title-box-mm d-flex">
-        <div class="landing-title-box-background-mm">
-        </div>
+ <!-- ======= Landing Title Box ======= -->
+    <section class="landing-title-box d-flex">
+        <div class="landing-title-box-background"></div>
         <div class="m-auto d-flex flex-column">
-            <div class="m-auto d-flex" style="margin-bottom: 200px">
-                <img class="m-auto me-lg-5 me-3 d-block landing-title-box-img-mm animate__animated animate__fadeInLeft animate__delay-2s"
-                    src="./assets/images/mm_general/mm_logo_whitemaze.PNG" width = "500">
+            <div class="m-auto d-flex">
+                <img class="m-auto me-lg-5 me-3 d-block landing-title-box-img animate__animated animate__fadeInLeft animate__delay-2s"
+                    src="./assets/images/mm_general/mm_logo_whitemaze.PNG">
                 <ul
                     class="my-auto landing-title-box-title list-unstyled fw-bold text-white display-1 animate__animated animate__fadeInRight animate__delay-2s">
-                    <li>MICROMOUSE</li>
+                    <li>Micromouse</li>
                 </ul>
             </div>
             <a class="mt-5 mx-auto link-light link-underline link-underline-opacity-0 bi bi-chevron-compact-down animate__animated animate__delay-4s animate__fadeInDown button"
